Weird, looks like built-in library loading is back